# control-architecture

./: .env.example  .gitignore  INSTALL.md  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260322_0001_create_memory_service_tables.py  20260322_0002_create_delegated_work_items.py
apps/capability-gateway/: README.md
apps/capability-gateway/src/capability_gateway/: config.py  main.py  mock_rail.py  schemas.py  service.py
apps/capability-gateway/tests/: conftest.py  test_capability_gateway.py  test_gateway_control_plane_loader.py
apps/control-plane/: README.md
apps/control-plane-service/: README.md
apps/control-plane-service/src/control_plane_service/: __init__.py  config.py  main.py  service.py
apps/control-plane-service/tests/: conftest.py  test_control_plane_service.py
apps/control-plane/src/control_plane/: __init__.py  config.py  main.py  schemas.py  service.py
apps/control-plane/tests/: conftest.py  test_control_plane.py
apps/ops-console/: README.md  package-lock.json  package.json  vite.config.ts
apps/ops-console/src/: App.tsx  api.ts  storage.ts  styles.css  types.ts
apps/orchestrator-api/: README.md
apps/orchestrator-api/src/orchestrator_api/: config.py  main.py  mcp_server.py  memory_client.py  policy.py  policy_client.py  registry.py  schemas.py  service.py  workflow_client.py
apps/orchestrator-api/tests/: conftest.py  test_mcp_server.py  test_orchestrator_api.py  test_registry_loader.py
apps/policy-engine/: README.md
apps/policy-engine/policies/: payment_controls.rego
apps/policy-engine/src/policy_engine/: __init__.py  config.py  main.py  service.py
apps/policy-engine/tests/: test_policy_engine.py
apps/policy-service/: README.md
apps/policy-service/src/policy_service/: __init__.py  config.py  main.py  schemas.py  service.py
apps/policy-service/tests/: test_policy_service.py
config/control-plane/: default.yaml
config/registry/: agents.yaml  capabilities.yaml
docs/architecture/: control-platform-architecture-v2.docx  control-platform-architecture-v2.md  implementation-update-2026-03.md  pagebreak.lua  poc-scope.md
docs/runbooks/: end-to-end-test.md  install-from-github.md  local-setup.md
docs/threat-models/: poc-threat-model.md
infra/helm/: README.md
infra/kubernetes/: README.md
infra/terraform/: README.md
scripts/: README.md  local-stack.sh
services/context-memory-service/: README.md
services/context-memory-service/src/context_memory_service/: __init__.py  config.py  main.py  models.py  repository.py  schemas.py
services/context-memory-service/tests/: test_context_memory_service.py
services/event-consumer/: README.md
services/event-consumer/src/event_consumer/: config.py  context_client.py  main.py  provenance_client.py  schemas.py  service.py
services/event-consumer/tests/: test_event_consumer.py
services/memory-service/: README.md
services/memory-service/src/agentic_money_movement_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/memory-service/src/memory_service/: config.py  main.py  models.py  repository.py  schemas.py
services/memory-service/tests/: conftest.py  test_app.py
services/provenance-service/: README.md
services/provenance-service/src/provenance_service/: __init__.py  config.py  database.py  main.py  models.py  repository.py  schemas.py
services/provenance-service/tests/: test_provenance_service.py
services/workflow-worker/: README.md
services/workflow-worker/src/workflow_worker/: capability_client.py  config.py  delegation.py  main.py  memory_client.py  schemas.py  service.py
services/workflow-worker/tests/: conftest.py  test_workflow_control_plane_loader.py  test_workflow_worker.py
